add Gruntfile and minify css

--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "devDependencies": {
     "karma": "~0.10",
     "karma-qunit": "^0.1.1",
-    "karma-ember-preprocessor": "^1.5.0"
+    "karma-ember-preprocessor": "^1.5.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-cssmin": "^0.10.0"
   }
 }
